# SE-Proyecto1

./: .gitignore
BackEnd/: CMakeLists.txt  Makefile  go.mod  go.sum  main.go
BackEnd/controllers/: camera.controller.go  common.controllers.go  door.controller.go  light.controller.go  login.controller.go
BackEnd/include/: pinControl.h
BackEnd/lib/: pinControl.c
BackEnd/network/: logic.network.go
BackEnd/resources/: camera.resource.go  door.resource.go  login.resource.go  state.resource.go  user.resource.go
BackEnd/routes/: camera.routes.go  door.routes.go  light.routes.go  login.routes.go  main.routes.go
BackEnd/signals/: logic.signals.go
BackEnd/src/: CMakeLists.txt  cam.go  logic.signals.go  main.signals.go  signals.go  test.c
BackEnd/src/include/: pinControl.h
BackEnd/src/lib/: pinControl.c
embedded-system-app/: .gitignore  README.md  angular.json  frontend-boceto.xopp  karma.conf.js  package-lock.json  package.json  proxy.conf.json
embedded-system-app/e2e/src/: app.e2e-spec.ts
embedded-system-app/src/: index.html
embedded-system-app/src/app/: app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
embedded-system-app/src/app/_helpers/: auth.interceptor.ts
embedded-system-app/src/app/_services/: auth.service.ts  house.service.ts  token-storage.service.ts  user-model.service.spec.ts  user-model.service.ts
embedded-system-app/src/app/home/: home.component.html  home.component.ts
embedded-system-app/src/app/house/: house.component.css  house.component.html  house.component.ts
embedded-system-app/src/app/login/: login.component.css  login.component.html  login.component.ts
